--- a/src/pages/index/index.module.css
+++ b/src/pages/index/index.module.css
@@ -3,6 +3,19 @@
   src: url('../../../public/LetterGothicStd.otf') format('opentype');
 }
 
+.container {
+  font-family: 'LetterGothicStd';
+  letter-spacing: 1.8px;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: justify;
+  color: var(--ng-text-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .title {
   font-size: 120px;
   font-weight: 100;
@@ -11,16 +24,33 @@
   letter-spacing: 20px;
 }
 
-.container {
-  font-family: 'LetterGothicStd';
-  font-size: 16px;
-  line-height: 24px;
-  text-align: justify;
-  color: #D1C5D0;
+.button {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 50px;
+  width: 120px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #9a4ab2;
+  margin: 30px 0 5px 0;
+  opacity: 0.8;
+  letter-spacing: 2px;
+  font-weight: bold;
+}
+
+.button:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.simpleButton {
+  opacity: 0.8;
+}
+
+.simpleButton:hover {
+  cursor: pointer;
+  opacity: 1;
 }
 
 .content {
@@ -84,4 +114,18 @@
 
 .video {
   margin-top: 20px
+}
+
+.form * {
+  margin-bottom: 10px;
+}
+
+.result {
+  margin-top: 30px;
+  margin-bottom: 20px;
+  white-space: pre-wrap;
+}
+
+.description {
+  margin-bottom: 30px;
 }
