--- a/src/components/Slider/index.module.css
+++ b/src/components/Slider/index.module.css
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 
 .value,.label {
@@ -44,4 +43,8 @@
   height: 25px;
   background: #9a4ab2;
   cursor: pointer;
+}
+
+.slider:focus {
+  outline-style: auto;
 }
