--- a/src/pages/tab/index.module.css
+++ b/src/pages/tab/index.module.css
@@ -54,7 +54,7 @@
 }
 
 .content {
-  width: 800px;
+  width: 60%;
   display: flex;
   flex-direction: column;
 }
@@ -82,7 +82,7 @@
   padding: 0px 0px 0px 20px;
 }
 
-.tabHeader li {
+.tabHeader a {
   color: #9a4ab2;
   display: flex;
   align-items: center;
@@ -93,11 +93,12 @@
   border-width: 1px;
   width: 200px;
   height: 50px;
-  margin: 10px 10px -1px 10px;
+  margin: 10px 10px -1.2px 10px;
   border-bottom-width: 1px;
   background-color: #11111e;
   z-index: 10;
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 .tabHeader .active {
@@ -113,7 +114,7 @@
 }
 
 .video {
-  margin-top: 20px
+  margin-top: 20px;
 }
 
 .form * {
@@ -128,4 +129,23 @@
 
 .description {
   margin-bottom: 30px;
+}
+
+@media (max-width: 768px) {
+  .title {
+    font-size: 50px;
+    letter-spacing: 10px;
+  }
+
+  .content {
+    width: 98%;
+  }
+
+  .tabHeader a {
+    font-size: 18px;
+  }
+
+  .tab {
+    padding: 20px;
+  }
 }
